--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
 </head>
 <body>
 
-<!-- Contenido de tu formulario o cualquier otro contenido HTML -->
-<div id="formulario">
-    <!-- Tu formulario aquí -->
-</div>
-
-<script src="https://sheetdb.io/s/f/a7w2gb6ls43sj.js"></script>
+<script src="https://sheetdb.io/s/f/b68wz7hlddd2p.js"></script>
 
 </body>
 </html>
