--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<script src="https://sheetdb.io/s/f/b68wz7hlddd2p.js"></script>
+ <script src="https://sheetdb.io/s/f/izgt2tl9ztwga.js"></script>
 
 </body>
 </html>
